--- a/css/main.css
+++ b/css/main.css
@@ -1,171 +1,175 @@
 :root{
-/*============
-colors
-=============*/
-
-/*=============
-primary colors
-==============*/
-
-/*===============
-main background 
-===============*/
---primary-very-dark-blue: hsl(233, 47%, 7%);
-
-/*===============
-card background
-===============*/
---primary-desaturated-blue: hsl(244, 38%, 16%);
-
-/*============
-accent
-=============*/
---primary-soft-violet: hsl(277, 64%, 61%);
-
-
-
-/*=============
-neutral colors
-==============*/
-
-/*===================
-main heading, stats
-===================*/
---neutral-white: hsl(0, 0%, 100%);
-
-/*===================
-main paragraph
-===================*/
---neutral-white-75: hsla(0, 0%, 100%, 0.75);
-
-/*===================
-stat headings
-===================*/
---neutral-white-60: hsla(0, 0%, 100%, 0.6);
-
-/*============
-Typography
-=============*/
---font-size: 0.9375rem;
-
-/*===============
-fonts and weights
-===============*/
---font-family-one: "Inter", sans-sarif;
---font-family-two: "Lexend Deca", sans-sarif;
---weight-700: 400;
---weight-400: 700;
-}
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: var(--primary-very-dark-blue);
-    font-size: var(--font-size);
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    place-content: center;
-    align-items: center;
-}
-
-main{
-    background-color: var(--primary-desaturated-blue);
-    border-radius: 0.5rem;
-    max-width: 80%;
-    max-height: 90%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column-reverse;
-    color: rgba(rgba(252, 0, 0, 0.911), green, blue, alpha)
-}
-
-picture{
-    position: relative;
-}
-
-picture::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(to bottom right, var(--primary-soft-violet), var(--primary-soft-violet));
-    opacity: 0.4;
-}
-
-img{
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.info-section{
-    text-align: center;
-    padding: 2rem 1.8rem 1rem;
-}
-
-h1,
-table th{
-    font-family: var(--font-family-one);
-    font-weight: var(--weight-400);
-    color: var(--neutral-white);
-    letter-spacing: 0.1ch;
-}
-
-p,
-table td{
-    font-family: var(--font-family-two);
-    font-weight: var(--weight-700);
-    font-size: small;
-}
-
-span{
-    color: var(--primary-soft-violet);
-}
-
-p{
-    color: var(--neutral-white-75);
-    line-height: 1.5rem;
-    margin: 1rem 0 3rem 0;
-}
-
-table{
-    margin: 0 auto 1rem;
-}
-
-td{
-    color: var(--neutral-white-60);
-    text-transform: uppercase;
-}
-
-@media screen and (min-width: 821px) {
-    main{
-        max-width: 60%;
-        flex-direction: row;
+    /*============
+    colors
+    =============*/
+    
+    /*=============
+    primary colors
+    ==============*/
+    
+    /*===============
+    main background 
+    ===============*/
+    --primary-very-dark-blue: hsl(233, 47%, 7%);
+    
+    /*===============
+    card background
+    ===============*/
+    --primary-desaturated-blue: hsl(244, 38%, 16%);
+    
+    /*============
+    accent
+    =============*/
+    --primary-soft-violet: hsl(277, 64%, 61%);
+    
+    
+    
+    /*=============
+    neutral colors
+    ==============*/
+    
+    /*===================
+    main heading, stats
+    ===================*/
+    --neutral-white: hsl(0, 0%, 100%);
+    
+    /*===================
+    main paragraph
+    ===================*/
+    --neutral-white-75: hsla(0, 0%, 100%, 0.75);
+    
+    /*===================
+    stat headings
+    ===================*/
+    --neutral-white-60: hsla(0, 0%, 100%, 0.6);
+    
+    /*============
+    Typography
+    =============*/
+    --font-size: 0.9375rem;
+    
+    /*===============
+    fonts and weights
+    ===============*/
+    --font-family-one: "Inter", sans-sarif;
+    --font-family-two: "Lexend Deca", sans-sarif;
+    --weight-700: 400;
+    --weight-400: 700;
     }
-
-    section{
-        width: 50%;
+    
+    *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    
+    body{
+        background-color: var(--primary-very-dark-blue);
+        font-size: var(--font-size);
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        place-content: center;
+        align-items: center;
+    }
+    
+    .card{
+        background-color: var(--primary-desaturated-blue);
+        border-radius: 0.5rem;
+        max-width: 80%;
+        max-height: 90%;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column-reverse;
+        color: rgba(rgba(252, 0, 0, 0.911), green, blue, alpha)
+    }
+    
+    picture{
+        position: relative;
+    }
+    
+    picture::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to bottom right, var(--primary-soft-violet), var(--primary-soft-violet));
+        opacity: 0.4;
+    }
+    
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
     }
     
     .info-section{
-        text-align: left;
-        padding: 3rem;
+        text-align: center;
+        padding: 2rem 1.8rem 1rem;
     }
-
-    div{
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
+    
+    h1,
+    table th{
+        font-family: var(--font-family-one);
+        font-weight: var(--weight-400);
+        color: var(--neutral-white);
+        letter-spacing: 0.1ch;
     }
-
+    
+    p,
+    table td{
+        font-family: var(--font-family-two);
+        font-weight: var(--weight-700);
+        font-size: small;
+    }
+    
+    span{
+        color: var(--primary-soft-violet);
+    }
+    
+    p{
+        color: var(--neutral-white-75);
+        line-height: 1.5rem;
+        margin: 1rem 0 3rem 0;
+    }
+    
     table{
-        display: inline-block;
+        margin: 0 auto 1rem;
     }
-}
+    
+    table th{
+        font-size: x-large;
+    }
+
+    table td{
+        color: var(--neutral-white-60);
+        text-transform: uppercase;
+    }
+    
+    @media screen and (min-width: 821px) {
+        .card{
+            max-width: 60%;
+            flex-direction: row;
+        }
+    
+        .info-section,
+        .picture-section{
+            width: 50%;
+        }
+        
+        .info-section{
+            text-align: left;
+            padding: 3rem;
+        }
+    
+        div{
+            display: flex;
+            text-align: left;
+        }
+    
+        table{
+            display: inline-block;
+        }
+    }
