--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,51 @@
-:root{
+:root {
     /*============
     colors
     =============*/
-    
+
     /*=============
     primary colors
     ==============*/
-    
+
     /*===============
     main background 
     ===============*/
     --primary-very-dark-blue: hsl(233, 47%, 7%);
-    
+
     /*===============
     card background
     ===============*/
     --primary-desaturated-blue: hsl(244, 38%, 16%);
-    
+
     /*============
     accent
     =============*/
     --primary-soft-violet: hsl(277, 64%, 61%);
-    
-    
-    
+
     /*=============
     neutral colors
     ==============*/
-    
+
     /*===================
     main heading, stats
     ===================*/
     --neutral-white: hsl(0, 0%, 100%);
-    
+
     /*===================
     main paragraph
     ===================*/
     --neutral-white-75: hsla(0, 0%, 100%, 0.75);
-    
+
     /*===================
     stat headings
     ===================*/
     --neutral-white-60: hsla(0, 0%, 100%, 0.6);
-    
+
     /*============
     Typography
     =============*/
     --font-size: 0.9375rem;
-    
+
     /*===============
     fonts and weights
     ===============*/
@@ -56,138 +54,126 @@
     --weight-700: 400;
     --weight-400: 700;
 }
-    
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-color: var(--primary-very-dark-blue);
     font-size: var(--font-size);
+    width: 100vw;
+    height: 100vh;
 }
 
 body,
-main{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    place-content: center;
-    align-items: center;
+main {
+    display: grid;
+    place-items: center;
 }
 
-.card{
+.card {
     background-color: var(--primary-desaturated-blue);
-    border-radius: 0.5rem;
     max-width: 80%;
-    max-height: 80%;
     overflow: hidden;
+    border-radius: 0.5rem;
+
     display: flex;
-    flex-direction: column-reverse;
-    color: rgba(rgba(252, 0, 0, 0.911), green, blue, alpha)
+    flex-direction: column;
+    text-align: center;
 }
 
-.info-section,
-.picture-section{
-    height: 50%;
-}
-
-.picture-section{
+.picture-section {
     position: relative;
 }
 
-.picture-section::after{
-    content: '';
+.picture-section::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom right, var(--primary-soft-violet), var(--primary-soft-violet));
-    opacity: 0.4;
+    background-image: linear-gradient(
+        to bottom right,
+        var(--primary-soft-violet),
+        var(--primary-soft-violet)
+    );
+    opacity: 0.5;
 }
 
-img{
+img {
     display: block;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
-.info-section{
-    text-align: center;
-    padding: 2rem 1.8rem 1rem;
+.info-section {
+    padding: 2rem 1.8rem 0.5rem;
 }
 
 .card-heading,
-.stat-item{
+.stat-item {
     font-family: var(--font-family-one);
     font-weight: var(--weight-400);
     color: var(--neutral-white);
 }
 
 .card-paragraph,
-.stat-heading-item{
+.stat-heading-item {
     font-family: var(--font-family-two);
     font-weight: var(--weight-700);
     font-size: smaller;
 }
 
 .card-heading,
-.stat-item{
+.stat-item {
     letter-spacing: 0.1ch;
     font-size: x-large;
 }
 
-.heading-span{
+.heading-span {
     color: var(--primary-soft-violet);
 }
 
-.card-paragraph{
+.card-paragraph {
     color: var(--neutral-white-75);
     line-height: 1.5rem;
     margin: 1rem 0 3rem 0;
 }
 
-.card-list{
-    list-style-type: none;
-    text-align: center;
+.stats {
+    display: flex;
+    flex-direction: column;
 }
 
-.stat-heading-item{
+.stat-heading-item {
     color: var(--neutral-white-60);
     margin-bottom: 1.5rem;
-    text-transform: uppercase;
 }
 
-@media screen and (min-width: 500px) {
-    .card{
-        max-width: 60%;
-        max-height: 50%;
+/*768px*/
+@media screen and (min-width: 48rem) {
+    .stats {
         flex-direction: row;
     }
 
-    .info-section,
-    .picture-section{
-        width: 50%;
-    }
-    
-    .info-section{
-        text-align: left;
-        padding: 2rem;
-    }
-
-    .card-list{
-        display: block;
-        text-align: left;
-    }
-
-    div{
-        float: left;
+    .stats div {
         width: 33.33%;
     }
 }
 
-@media screen and (width: 900px) {
+/*821px*/
+@media screen and (min-width: 51.3125rem) {
+    .card {
+        text-align: start;
+        flex-direction: row-reverse;
+    }
 
+    .picture-section,
+    .info-section {
+        width: 50%;
+    }
 }
